--- a/app/templates/includes/sidebar.html
+++ b/app/templates/includes/sidebar.html
@@ -91,13 +91,13 @@
           </li>
           <li class="nav-item nav-category">Links</li>
           <li class="nav-item">
-            <a class="nav-link" href="https://appseed.us/admin-dashboards/flask-star-admin">
+            <a target="_blank" class="nav-link" href="https://appseed.us/admin-dashboards/flask-star-admin">
               <i class="menu-icon mdi mdi-download"></i>
               <span class="menu-title">Donwload Product</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://appseed.us/support">
+            <a target="_blank" class="nav-link" href="https://appseed.us/support">
               <i class="menu-icon mdi mdi-information"></i>
               <span class="menu-title">Get Support</span>
             </a>
